--- a/bi.html
+++ b/bi.html
@@ -35,12 +35,16 @@
 		<div class="col=md-12"><ul class="nav nav-tabs">
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
-								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+         
+
+
         <ul class="dropdown-menu">
-          <li><a href="vl.html">Video Lessons</a></li>
-          <li><a href="wl.html">Written Lessons</a></li>
+          <li><a href="hardware.html">Troubleshooting Lesson</a></li>
+          <li><a href="interview.html">Interview Lesson</a></li>
+          <li><a href="noun.html">Noun Lesson</a></li>
+          <li><a href="networking.html">Networking Lesson</a></li>
         </ul>
-      </li>
 
 							<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Team Prime<span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -94,7 +98,7 @@ body {
 
 		<h4 id="names" style="font-size: 30px">Brahulio Iniguez</h4>
 		
-		<p id="winner"> 
+		<p style="font-size: 25px"> 
 
 		I am currently attending YearUp where I am receiving training in the IT field, in areas like Hardware, Software, and Coding. The area that I am planning on pursuing is software. More specifically Microsoft office specialist. My goals are to go on internship and do a great job so I can get hired on full time afterwards. As I am working I plan on returning to school to get a bachelor of science degree in computer information systems to help me further myself in my IT career. On my free time I like to exercise and read books.
 		</p>
