--- a/noun.html
+++ b/noun.html
@@ -35,16 +35,17 @@
 		<div class="col=md-12"><ul class="nav nav-tabs">
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
-						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
          
 
 
-        <ul class="dropdown-menu">
+         <ul class="dropdown-menu">
           <li><a href="hardware.html">Troubleshooting Lesson</a></li>
           <li><a href="interview.html">Interview Lesson</a></li>
           <li><a href="noun.html">Noun Lesson</a></li>
           <li><a href="networking.html">Networking Lesson</a></li>
         </ul>
+      </li>
 
 							<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Team Prime<span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -54,11 +55,12 @@
           <li><a href="nt.html">Nykia Tate</a></li>
         </ul>
       </li>
+
 								<li role="presentation"><a  href="realcontact.html" >About Prime Peak</a></li>
 
 
-<li role="presentation"><a  href="oc.html" >Contact</a></li>
 
+<li role="presentation"><a  href="oc.html" >Contact</a></li>
 						</ul>
 		</nav>
 		</div>
@@ -72,26 +74,60 @@
 
 		<div id="winner">
 
-	<img src="images/fr3sh.jpg" align="left">
+<p style="font-size: 50px" >Nouns Video</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CRN02WKnGqI" frameborder="0" allowfullscreen></iframe>
+		<p style="font-size: 50px" >Nouns Lesson</p>
+
+		<p style="font-size: 30px">Topic:</p> 
+<p> Learning what Nouns are and how to identify them in a sentence.</p>
+<p>
+  Knowing what nouns are and how to identify them within a sentence is essential in 
+
+writing and understanding the English language. Instead of learning in a potentially 
+
+“boring” classroom type of setting, we have used a cartoon presentation to help 
+
+show the importance of using and identifying nouns correctly. This video will 
+
+appeal primarily to those who are visual learners; however, if notes are taken while 
+
+the lesson is being taught, this video’s examples may help those who prefer the 
+
+kinesthetic technique as well.</p>
+
+<p style="font-size: 30px"> Content:</p> 
+
+<p style="font-size: 15px">  
+
+ A cartoon presentation will be used to demonstrate the use of nouns and 
+
+its definition.
+</br>
+ Noun types such as concrete, abstract, proper, and common nouns are 
+
+explained with examples
+</br>
+ Identifiable music to our targeted audience will be included</p>
 
 
-			<style>
+<div id="yo">
+	
+
+		<style>
 body {
     background-image: url("images/fog.gif");
     background-repeat: no-repeat;
-    background-size: 1700px;
+    background-size: 1800px;
 
 
 }
 </style>
-		<body>
 
-		<h4 id="names" style="font-size: 30px">Bryce Johnson</h4>
-		
-		<p style="font-size: 25px"> 
 
-		Bryce is a Chicago native. He has always had big dreams ever since he was a child. As a kid he said that “In order to make it in life you need to do everything outside of the box. It may be hard but the outcome is all that matters.” Now Bryce Johnson is part of Class 11 at Year Up Chicago. Year Up is an IT training program. At Year Up ,Bryce focuses on the Programming Track. He likes to design websites; He actually used his Year Up training in order to build and design his own company’s website. He is also working on designing his personal site for his endeavors. He has a dream of becoming an entrepreneur in the music industry. In his free time, Bryce likes to produce music (mainly Electronic Dance Music), Dance, and Run his company.
-		</p>
+
+
+</div>
 		
 		
 		
@@ -105,14 +141,13 @@ body {
 	
 		
 		<center><img src="images/PP2.gif" height="200" width="200"></center>
-
-<p style="color:black" class="col-md-6">Stay Connected Use The Hashtag <span style="color: red">#StayPRIMED</span> On Social Media</p>
+ 
+		<p style="color:black" class="col-md-6">Stay Connected Use The Hashtag <span style="color: red">#StayPRIMED</span> On Social Media</p>
 		
 		
 		<p style="color:black" class="col-md-6">Feel Free To Email Us At <span style="color: red">primepeak@gmail.com</span> On Social Media</p>
 		</footer>
 		
-		 
 		<!--___________________________________________ -->
 
 
