--- a/nt.html
+++ b/nt.html
@@ -35,13 +35,16 @@
 		<div class="col=md-12"><ul class="nav nav-tabs">
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
-								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="vl.html">Video Lessons</a></li>
-          <li><a href="wl.html">Written Lessons</a></li>
-        </ul>
-      </li>
+					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+         
 
+
+        <ul class="dropdown-menu">
+          <li><a href="hardware.html">Troubleshooting Video</a></li>
+          <li><a href="interview.html">Interview Lesson</a></li>
+          <li><a href="noun.html">Noun Lesson</a></li>
+          <li><a href="networking.html">Networking Lesson</a></li>
+        </ul>
 							<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Team Prime<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="bj.html">Bryce Johnson</a></li>
@@ -83,7 +86,7 @@ body {
 		<body>
 <h4 id="names" style="font-size: 30px">Nykia Tate</h4>
 		
-		<p id="winner"> 
+		<p style="font-size: 25px"> 
 
 		 Nykia Tate. I am currently a student at Year Up, which is located in Chicago, IL. Year Up is a leading one-year career development program with 250 corporate partners around the country; the program includes college-level courses, professional training, and a six-month internship. I am learning the skills of IT in hardware, software, networking/programming. In my spare time, I spend time with my 1 year old son, and also read different books. I like participating in different activities in my spare time. I have finished a semester at Harold Washington College, where I am earning credits towards my Associates degree in Early Childhood Education. After Year Up, I plan to get my Associates degree in Early Childhood Education and my Bachelors degree in computer technology.  
 		</p>
