--- a/realcontact.html
+++ b/realcontact.html
@@ -34,12 +34,16 @@
 		<div class="col=md-12"><ul class="nav nav-tabs">
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
-								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+         
+
+
         <ul class="dropdown-menu">
-          <li><a href="vl.html">Video Lessons</a></li>
-          <li><a href="wl.html">Written Lessons</a></li>
+          <li><a href="hardware.html">Troubleshooting Lesson</a></li>
+          <li><a href="interview.html">Interview Lesson</a></li>
+          <li><a href="noun.html">Noun Lesson</a></li>
+          <li><a href="networking.html">Networking Lesson</a></li>
         </ul>
-      </li>
 
 
 								
@@ -85,7 +89,7 @@ body {
 }
 </style>
 
-		<p style="font-size: 50">
+		<p style="font-size: 25px">
 			This group Was founded by Year Up Class 11 Professionals Bryce Johnson, Tashai Ward, Nykia Tate, and Brahulio Iniguez and their company is based around Qualty and Expression. 
 </br>
 			Here at PRIME PEAK, We take our lessons seriously and since you are on our site we take it that you are interested in the best I.T. and Business Lessons on the internet.
