--- a/tw.html
+++ b/tw.html
@@ -35,12 +35,16 @@
 		<div class="col=md-12"><ul class="nav nav-tabs">
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
-								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+				<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+         
+
+
         <ul class="dropdown-menu">
-          <li><a href="vl.html">Video Lessons</a></li>
-          <li><a href="wl.html">Written Lessons</a></li>
+          <li><a href="hardware.html">Troubleshooting Lesson</a></li>
+          <li><a href="interview.html">Interview Lesson</a></li>
+          <li><a href="noun.html">Noun Lesson</a></li>
+          <li><a href="networking.html">Networking Lesson</a></li>
         </ul>
-      </li>
 
 							<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Team Prime<span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -73,7 +77,7 @@
 <body>
 <h4 id="names" style="font-size: 30px">Tashai Ward</h4>
 		
-		<p id="winner"> 
+		<p style="font-size: 25px"> 
 
 		Hello everyone, meet Tashai Ward!  She’s 21 years old, and she is one of the creators of this awesome project. Tashai is a young and goal driven individual whose passion for knowledge, progression, and excellence are innumerable. Determined in her path to entrepreneurship, Tashai continues to expand her professional network while becoming more proficient within the technical field. With the long term goal of becoming in charge of all technical situations behind her future business venture, Tashai is currently a student at Year Up Chicago advancing her skills while learning software applications, hardware skills, and front end web development. Her hobbies include working on music, engaging in sports, and making people laugh.
 		</p>
