--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@
 		<div><ul class="nav nav-tabs" >
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
-								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+			
+						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+         
+
+
         <ul class="dropdown-menu">
-          <li><a href="vl.html">Video Lessons</a></li>
-          <li><a href="wl.html">Written Lessons</a></li>
+          <li><a href="hardware.html">Troubleshooting Lesson</a></li>
+          <li><a href="interview.html">Interview Lesson</a></li>
+          <li><a href="noun.html">Noun Lesson</a></li>
+          <li><a href="networking.html">Networking Lesson</a></li>
         </ul>
-      </li>
 
 
 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Team Prime<span class="caret"></span></a>
