--- a/interview.html
+++ b/interview.html
@@ -35,7 +35,7 @@
 		<div class="col=md-12"><ul class="nav nav-tabs">
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
-						<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
+								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
          
 
 
@@ -45,6 +45,7 @@
           <li><a href="noun.html">Noun Lesson</a></li>
           <li><a href="networking.html">Networking Lesson</a></li>
         </ul>
+      </li>
 
 							<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Team Prime<span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -54,11 +55,12 @@
           <li><a href="nt.html">Nykia Tate</a></li>
         </ul>
       </li>
+
 								<li role="presentation"><a  href="realcontact.html" >About Prime Peak</a></li>
 
 
-<li role="presentation"><a  href="oc.html" >Contact</a></li>
 
+<li role="presentation"><a  href="oc.html" >Contact</a></li>
 						</ul>
 		</nav>
 		</div>
@@ -72,10 +74,14 @@
 
 		<div id="winner">
 
-	<img src="images/fr3sh.jpg" align="left">
+		
+		
 
 
-			<style>
+<div id="yo">
+	
+
+		<style>
 body {
     background-image: url("images/fog.gif");
     background-repeat: no-repeat;
@@ -84,14 +90,11 @@ body {
 
 }
 </style>
-		<body>
 
-		<h4 id="names" style="font-size: 30px">Bryce Johnson</h4>
-		
-		<p style="font-size: 25px"> 
 
-		Bryce is a Chicago native. He has always had big dreams ever since he was a child. As a kid he said that “In order to make it in life you need to do everything outside of the box. It may be hard but the outcome is all that matters.” Now Bryce Johnson is part of Class 11 at Year Up Chicago. Year Up is an IT training program. At Year Up ,Bryce focuses on the Programming Track. He likes to design websites; He actually used his Year Up training in order to build and design his own company’s website. He is also working on designing his personal site for his endeavors. He has a dream of becoming an entrepreneur in the music industry. In his free time, Bryce likes to produce music (mainly Electronic Dance Music), Dance, and Run his company.
-		</p>
+
+
+</div>
 		
 		
 		
@@ -105,14 +108,13 @@ body {
 	
 		
 		<center><img src="images/PP2.gif" height="200" width="200"></center>
-
-<p style="color:black" class="col-md-6">Stay Connected Use The Hashtag <span style="color: red">#StayPRIMED</span> On Social Media</p>
+ 
+		<p style="color:black" class="col-md-6">Stay Connected Use The Hashtag <span style="color: red">#StayPRIMED</span> On Social Media</p>
 		
 		
 		<p style="color:black" class="col-md-6">Feel Free To Email Us At <span style="color: red">primepeak@gmail.com</span> On Social Media</p>
 		</footer>
 		
-		 
 		<!--___________________________________________ -->
 
 
