--- a/vl.html
+++ b/vl.html
@@ -36,9 +36,14 @@
 								<li role="presentation"><a  href="index.html" >Home</a></li>
 
 								<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="realvideos.html">Lessons<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="vl.html">Video Lessons</a></li>
-          <li><a href="wl.html">Written Lessons</a></li>
+         
+
+
+         <ul class="dropdown-menu">
+          <li><a href="#">Hardware Lesson</a></li>
+          <li><a href="#">Interview Lesson</a></li>
+          <li><a href="#">Noun Lesson</a></li>
+          <li><a href="#">Networking Lesson</a></li>
         </ul>
       </li>
 
