--- a/hardware.html
+++ b/hardware.html
@@ -79,13 +79,28 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n1vBp-x76i4" frameborder="0" allowfullscreen></iframe>
 
+<p style="font-size: 30px">Tips for troubleshooting:
+</p>
+<p style="font-size: 20px">
+Identify the problem
+</br>
+Establish a theory of probable cause
+</br>
+Test the theory to determine the causer
+</br>
+Establish plan of action
+</br>
+Verify full functionality 
+</br>
+Document findings</p>
+
 
 <div id="yo">
 	
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+  background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 1700px;
 
