--- a/index.html
+++ b/index.html
@@ -74,10 +74,29 @@
 
 		<div id="winner">
 
+<p style="font-size:30px"> Welcome to Prime Peak </p>
+</br>
 
+<p style="font-size:20px">
+	Being equipped with proper business communication and tech skills is extremely important when trying to advance yourself within the information technology profession, especially dealing with corporate America specifically. Being able to speak and write is vital to communicating in a job setting, or most importantly, getting the job in the first place. Also, if you’re focused on gaining a tech career, you have to know and be confident in the tasks you’re expected to take on. Most applicants for corporate positions are college graduates. Going to college to learn and gain a degree is spectacular, but that’s usually all a graduate possesses. The experience is never really enforced so even with degrees, people are not really equipped with the skills needed to exceed. With this proposal, we are using what we have learned with humor added to target all methods such as auditory learning, visual learning, and even cooperative learning/kinesthetic approach. We believe this is useful because everyone does not learn the same, so being of assistance to all styles is imperative. 
+</p>
+
+</br>
+</br>
+</br>
+
+<p style="font-size: 25px">Topics of Discussion</p>
+
+<img src="images/ts.jpg" height="300px" width="300px" class="col-md-3">
+
+<img src="images/in.jpg" height="300px" width="300px" class="col-md-3">
+
+<img src="images/nw.jpg" height="300px" width="300px" class="col-md-3">
+
+<img src="images/noun.jpg" height="300px" width="300px" class="col-md-3">
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 2000px;
 
