--- a/networking.html
+++ b/networking.html
@@ -83,11 +83,13 @@
 
 		<p style="font-size: 30px">Topic:</p> 
 
-		<p> Setting up a home network and the required device along with the necessary cables.</p> 
+		<p style="font-size: 20px"> Setting up a home network and the required device along with the necessary cables.</p> 
 
-<p> 
 
-Why and How: A computer home network is a very common thing as well as essential nowadays. It 
+<p style="font-size: 30px">  Why and How: </p>
+
+
+<p style="font-size: 20px"> A computer home network is a very common thing as well as essential nowadays. It 
 
 allows for more mobility and no longer are you confined to a small space where your computer is 
 
@@ -104,7 +106,7 @@ components involved in setting up a computer home network.</p>
 <p style="font-size: 30px"> Content:</p>   
 
 </br>
-
+<p style="font-size: 20px">
  Brahulio will walk into the LCM and introduce himself as well as the topic that he will be 
 
 discussing for the mod III project.
@@ -152,7 +154,7 @@ red blinking light that indicates just that.</p>
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 2500px;
 
