--- a/noun.html
+++ b/noun.html
@@ -7,7 +7,7 @@
 <div id="Head">
 	<div id="Moving">
 	
-	<marquee behavior="scroll" direction="left" scrollamount="10" font-size="30">
+	<marquee behavior="scroll" direction="left" scrollamount="10" font-size="30px">
 	Welcome to the Official PRIME PEAK Website</font></marquee>
 	</div>
 	
@@ -80,9 +80,10 @@
 		<p style="font-size: 50px" >Nouns Lesson</p>
 
 		<p style="font-size: 30px">Topic:</p> 
-<p> Learning what Nouns are and how to identify them in a sentence.</p>
-<p>
-  Knowing what nouns are and how to identify them within a sentence is essential in 
+<p style="font-size: 20px"> Learning what Nouns are and how to identify them in a sentence.</p>
+<p style="font-size: 30px">  Why and How: </p>
+ 
+ <p style="font-size: 20px"> Knowing what nouns are and how to identify them within a sentence is essential in 
 
 writing and understanding the English language. Instead of learning in a potentially 
 
@@ -98,7 +99,7 @@ kinesthetic technique as well.</p>
 
 <p style="font-size: 30px"> Content:</p> 
 
-<p style="font-size: 15px">  
+<p style="font-size: 20px">  
 
  A cartoon presentation will be used to demonstrate the use of nouns and 
 
@@ -116,9 +117,9 @@ explained with examples
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
-    background-size: 1800px;
+    background-size: 2000px;
 
 
 }
