--- a/nt.html
+++ b/nt.html
@@ -75,7 +75,7 @@
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 1700px;
 
