--- a/interview.html
+++ b/interview.html
@@ -73,9 +73,31 @@
 		</div>
 
 		<div id="winner">
+	<p style="font-size: 50px">How to Conduct a Interview Video</p>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/E78k_XDjFLA" frameborder="0" allowfullscreen></iframe>
 		
-		
+	<p style="font-size: 50px">How to Conduct a Interview Lesson</p>
+			<p style="font-size: 30px">Topic:</p> 
+
+ <p style="font-size: 20px">How to conduct an Interview</p>
+
+<p style="font-size: 30px"> Why and How: </p> 
+
+ <p style="font-size: 20px">  In today’s employment world, it is essential to have strong interviewing skills and knowing how to interview correctly. The most common reason being is that the competition between graduates and those with experience can cost you an opportunity if you fail to give off a good impression. Preparing for an interview is very simple once taught. Come to your interview prepared with your resume and cover letter, greet the interviewer with a firm shake, smile and be approachable throughout the whole process, give the best educated and job related answers to questions, and always end your interview with a firm shake. Most people don’t know, but sending a thank you email within 48 hrs of the interview, improves your chances of being considered. Please be aware of the behaviors you present simply because the first impression is the best impression!  In this video, we will be showing how to conduct an interview vs. how not to. </p> 
+
+
+
+<p style="font-size: 30px"> Content:</p>   
+
+
+<p style="font-size: 20px">  Tashai will be waiting in an office waiting area, while using her phone and when called to interview gives an improper greeting exhibiting bad behaviors. For example, asking about the salary makes the company think that your focus is money opposed to helping the company succeed.
+Nykia will be sitting quietly waiting to be called in to interview, also greeting the interviewer with a firm shake and smile.
+Tashai will enter the interviewing room with Brahulio while using her phone. She is not focusing on the interview.
+Nykia walks in room with Brahulio ready to conduct proper interview.
+Tashai uses her phone during the interview and does not listen to brahulio when he ask questions. She gives answers unrelated to her job performance.
+Nykia listens to Brahulio and answers all of his questions very well showing her hard working abilities as well as her friendly personality. 
+</p>
 
 
 <div id="yo">
@@ -83,7 +105,7 @@
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 1700px;
 
