--- a/hardware.html
+++ b/hardware.html
@@ -74,18 +74,59 @@
 
 		<div id="winner">
 
-	<p style="font-size: 50px">Troubleshooting Video</p>
+	<p style="font-size: 50px">The Basics of Troubleshooting Video</p>
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/n1vBp-x76i4" frameborder="0" allowfullscreen></iframe>
 
+<p style="font-size: 40px">Tips for Troubleshooting:</p>
 
+<p style="font-size:25px">
+Identify the problem 
+</br>
+Establish a theory of probable cause 
+</br>
+Test the theory to determine the causer
+</br> 
+Establish plan of action 
+</br>
+Verify full functionality 
+</br>
+Document findings
+</p>
+
+
+<p style="font-size: 50px">The Basics of Troubleshooting Lesson</p>
+
+<p>
+	
+	<p style="font-size: 30px">Topic:</p> 
+	<p style="font-size: 20px"> How to troubleshoot a computer , specifically a MAC and Windows and the different possible computer issues. </p>
+
+<p style="font-size: 30px"> Why and How: </p> 
+<p style="font-size: 20px">
+Troubleshooting is being able to solve a problem with basic knowledge.  Troubleshooting consist of proper thinking.The basic steps of troubleshooting are : identify the problem, Establish a theory of a probable cause,test the theory to determine a probable cause, establish an action plan, verify the system functionality, make note of the problems. 
+</p>
+
+<p style="font-size: 30px"> Content:</p>
+
+<p style="font-size: 20px">
+Bryce and Nykia will act out the commercial Jake from Statefarm
+Julio will be acting as Jake from statefarm, and helping Bryce with a computer problem. 
+Julio will also walk Bryce through the steps of troubleshooting and will explain to Bryce what is troubleshooting.
+Nykia will then ask Julio questions about her laptop and then discuss the problem over the phone.
+Julio will then explain what the problem of Bryce computer can be and a easy way to solve it . 
+Julio will then talk Bryce through the steps of troubleshooting his computer, has Bryce is going through the steps of troubleshooting his computer, Julio will then talk to Nykia about troubleshooting her laptop. 
+Julio will explain to Nykia what is causing the problem with her laptop, and then will walk her through fixing the probable cause of her laptop not functioning properly. 
+Julio will then explain why troubleshooting even the simplest problem can be easy.
+
+</p>
 <div id="yo">
 	
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 1700px;
 
