--- a/noun.html
+++ b/noun.html
@@ -80,8 +80,9 @@
 		<p style="font-size: 50px" >Nouns Lesson</p>
 
 		<p style="font-size: 30px">Topic:</p> 
-<p> Learning what Nouns are and how to identify them in a sentence.</p>
-<p>
+
+<p style="font-size: 20px"> Learning what Nouns are and how to identify them in a sentence.
+
   Knowing what nouns are and how to identify them within a sentence is essential in 
 
 writing and understanding the English language. Instead of learning in a potentially 
@@ -98,7 +99,7 @@ kinesthetic technique as well.</p>
 
 <p style="font-size: 30px"> Content:</p> 
 
-<p style="font-size: 15px">  
+<p style="font-size: 20px">  
 
  A cartoon presentation will be used to demonstrate the use of nouns and 
 
@@ -116,7 +117,7 @@ explained with examples
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 1800px;
 
