--- a/realcontact.html
+++ b/realcontact.html
@@ -81,7 +81,7 @@
 
 		<style>
 body {
-    background-image: url("images/fog.gif");
+    background-image: url("images/ember.gif");
     background-repeat: no-repeat;
     background-size: 1700px;
 
@@ -92,9 +92,9 @@ body {
 		<p style="font-size: 25px">
 			This group Was founded by Year Up Class 11 Professionals Bryce Johnson, Tashai Ward, Nykia Tate, and Brahulio Iniguez and their company is based around Qualty and Expression. 
 </br>
-			Here at PRIME PEAK, We take our lessons seriously and since you are on our site we take it that you are interested in the best I.T. and Business Lessons on the internet.
+			Here at Prime Peak, We take our lessons seriously and since you are on our site we take it that you are interested in the best I.T. and Business Lessons on the internet.
 			</br>
-			We make our lessons fun that way people never get tired of working. Our lessons as of now lean towards peopel that are visual learners but we are constantly working on lessons for other learning styles. 
+			We make our lessons fun that way people never get tired of working. Our lessons are useful for people that use any style of learning.
 		We also Exercise Legitimate Caligraphy, Cultivate Technical Knownledge, 
 Highlight the P's and Q's of a Corporate Enviroment, and
 Exhibit Tech Savviness
